force-app/main/default/objects/Auth_Provider_Log__c/Auth_Provider_Log__c.object-meta.xml
<CustomObject>
    <description>Object to store (error) informaton for custom Auth Providers</description>
    <label>Auth Provider Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auth Provider Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>