force-app/main/default/objects/Auth_Provider_Log__c/fields/Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Log_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The error Id that is thrown by the custom Auth Provider</inlineHelpText>
    <label>Log Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>