force-app/main/default/objects/Auth_Provider_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <inlineHelpText>The (error) message returned by the Auth Provider</inlineHelpText>
    <label>Message</label>
    <length>120000</length>
    <type>LongTextArea</type>
</CustomField>